fixed bug where it was possible to scroll horizontally in menu on mobile

--- a/web/gpg4win.css
+++ b/web/gpg4win.css
@@ -1209,6 +1209,7 @@ input[type=number] {
 
   #menu{
     height: auto;
+    overflow-x: hidden;
   }
 
   #menu-button{
